# M365TCO

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/skills/verify/: SKILL.md
.github/workflows/: docker-publish.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/pricesync/: __init__.py  auth.py  config.py  fetch.py  freshness.py  notify.py  storage.py
backend/app/routers/: admin.py  catalog.py  engagements.py  entities.py  pricesync.py
backend/app/seeds/: ai_prompts.json  bundles.json  coverage.json  license_limits.json  outcomes.json
backend/app/services/: ai.py  ai_prompts.py  bundles.py  catalog_file.py  catalog_provenance.py  compute.py  defaults.py  exporter.py  inspector.py  limits.py  narrative.py  partner_center.py  pricesheet.py  sanity.py  secrets.py  seeds.py  serialize.py  swap.py  updatecheck.py  updater.py
backend/tco_engine/: __init__.py  engine.py  models.py  optimizer.py
backend/tests/: conftest.py  test_ai.py  test_api_smoke.py  test_bundles.py  test_catalog_pricing.py  test_engine.py  test_exporter.py  test_limits.py  test_migrations.py  test_pricesync.py  test_swap.py  test_third_party_covers.py  test_updatecheck.py  test_updater.py
docs/: DATA_ARCHITECTURE.md  DATA_MODEL.md  ENGINE_SPEC.md  PRICE_SYNC.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AdminPanel.jsx  BundleAnalysis.jsx  CoverageCheck.jsx  CoverageMap.jsx  (+14 more)
